[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rjfrank"
version = "1.0.0"
description = "An honorary Python module celebrating Randy Frank."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Visesh Prasad", email = "viseshrprasad@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/viseshrp/rjfrank"
